<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mostafa.emojibuddies.MainActivity">

    <item
        android:id="@+id/action_emojify_from_gallery"
        android:title="@string/action_emojify_from_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_friend"
        android:title="@string/action_add_friend"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_tag"
        android:title="@string/action_show_tag"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_emoji_set"
        app:showAsAction="never"
        android:title="@string/action_change_emoji_set"/>
</menu>
